--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
     "@tanstack/react-query": "^5.17.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "siwe": "^2.1.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.0.3",
-    "wagmi": "^2.0.0-rc.3",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13",
     "zod": "^3.22.4"
   },
   "devDependencies": {
