Wagmi hooks implemented

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "siwe": "^2.1.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13",
     "zod": "^3.22.4"
